feat: añadir html y css base
traje esto de la anterior prueba V2

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ui-con-teclado</title>
+    <title>UI con teclado V2</title>
     <link rel="stylesheet" href="/src/style.css">
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id='screen'>
+      <article id='cursor'></article>
+      <div id='map'></div>
+    </div>
   </body>
 </html>
