feat: mejoras y cambios
se me fueron un poco los cambios

--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UI con teclado V2</title>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="/src/styles/style.css">
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <div id='screen'>
-      <article id='cursor'></article>
-      <div id='map'></div>
-    </div>
+    <div id='screen'></div>
   </body>
 </html>
